; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bwn/extr_if_bwn.c_bwn_set_slot_time.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bwn/extr_if_bwn.c_bwn_set_slot_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bwn_mac = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@BWN_PHYTYPE_G = common dso_local global i64 0, align 8
@BWN_SHARED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bwn_mac*, i64)* @bwn_set_slot_time to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bwn_set_slot_time(%struct.bwn_mac* %0, i64 %1) #0 {
  %3 = alloca %struct.bwn_mac*, align 8
  %4 = alloca i64, align 8
  store %struct.bwn_mac* %0, %struct.bwn_mac** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.bwn_mac*, %struct.bwn_mac** %3, align 8
  %6 = getelementptr inbounds %struct.bwn_mac, %struct.bwn_mac* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @BWN_PHYTYPE_G, align 8
  %10 = icmp ne i64 %8, %9
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  br label %17

12:                                               ; preds = %2
  %13 = load %struct.bwn_mac*, %struct.bwn_mac** %3, align 8
  %14 = load i64, i64* %4, align 8
  %15 = add nsw i64 510, %14
  %16 = call i32 @BWN_WRITE_2(%struct.bwn_mac* %13, i32 1668, i64 %15)
  br label %17

17:                                               ; preds = %12, %11
  ret void
}

declare dso_local i32 @BWN_WRITE_2(%struct.bwn_mac*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
